--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <li>Superman Doors</li>
             <li>Fuzzy Dice</li>
         </ul>
-        <img src="images/site/own_today.png" alt="Own Today">
+        <a href="#"><img src="images/site/own_today.png" alt="Own Today"></a>
     </div>
 </section>
 <div class="section_wrapper">
