--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url('/images/site/checkerboard.jpg');
+  background-image: url('/images/site/small_check.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,6 +90,11 @@ nav ul li.active {
   font-weight: bold;
 }
 
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
 /* Footer */
 footer {
   display: flex;
@@ -116,7 +121,7 @@ footer .copyright {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.957);
   padding: 20px;
   min-height: 100vh;
   box-sizing: border-box;
@@ -280,6 +285,10 @@ h1 {
 
 /* Media Queries */
 @media (max-width: 768px) {
+  body {
+    background-image: none;
+  }
+
   nav {
     width: 100%;
     padding: 0 20px;
