--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <% const d=new Date() 
     let year=d.getFullYear() %>
     <footer>
+        <a href="#">Error Link</a><br/>
         <p class="copyright">&copy; <%= year %>, CSE Motors</p>
     </footer>
