--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <section class="welcome">
     <h1>Welcome to CSE Motors</h1>
+    <%- messages() %>
     <div class="delo-card">
         <h2>DMC Delorean</h2>
         <ul>
@@ -24,6 +25,15 @@
     </section>
     <section class="upgrades">
         <h4>Delorean Upgrades</h4>
+        <div class="delo-card">
+        <h2>DMC Delorean</h2>
+        <ul>
+            <li>3 Cup Holders</li>
+            <li>Superman Doors</li>
+            <li>Fuzzy Dice</li>
+        </ul>
+        <a href="#"><img src="images/site/own_today.png" alt="Own Today"></a>
+    </div>
         <ul>
             <li><img src="images/upgrades/flame.jpg" alt="Flame Decals"><br><a href="#">Flame Decals</a></li>
             <li><img src="images/upgrades/flux-cap.png" alt="Flux Cap"><br><a href="#">Flux Capacitor</a></li>
