--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -7,4 +7,5 @@
     <input type="password" id="password" name="password" required><br><br>
 
     <button type="submit">Submit</button>
-</form>
+</form><br>
+No Account?<a href="/account/registerr">Register</a>
