--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -345,6 +345,7 @@ label {
   display: block;
 }
 
+input[type="text"],
 input[type="email"],
 input[type="password"] {
   width: 100%;
@@ -355,6 +356,7 @@ input[type="password"] {
   box-sizing: border-box;
 }
 
+input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
   border-color: #007bff;
