--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <section class="welcome">
     <h1>Welcome to CSE Motors</h1>
-    <%- messages() %>
     <div class="delo-card">
         <h2>DMC Delorean</h2>
         <ul>
@@ -26,13 +25,13 @@
     <section class="upgrades">
         <h4>Delorean Upgrades</h4>
         <div class="delo-card">
-        <h2>DMC Delorean</h2>
+        <!-- <h2>DMC Delorean</h2>
         <ul>
             <li>3 Cup Holders</li>
             <li>Superman Doors</li>
             <li>Fuzzy Dice</li>
         </ul>
-        <a href="#"><img src="images/site/own_today.png" alt="Own Today"></a>
+        <a href="#"><img src="images/site/own_today.png" alt="Own Today"></a> -->
     </div>
         <ul>
             <li><img src="images/upgrades/flame.jpg" alt="Flame Decals"><br><a href="#">Flame Decals</a></li>
