--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,4 +1,5 @@
 <h2>Login</h2>
+<div id="response-message"><%- messages() %></div>
 <form action="/submit" method="post">
     <label for="email">Email:</label><br>
     <input type="email" id="email" name="email" required><br><br>
