--- a/views/inventory/addinventory.ejs
+++ b/views/inventory/addinventory.ejs
@@ -2,7 +2,9 @@
 <form action="/inv/addinventory" method="POST" class="inventory-form">
     <div class="form-group">
         <label for="inv_make">Make</label>
-        <input type="text" id="inv_make" name="inv_make" required placeholder="Enter vehicle make" class="form-input">
+        <input type="text" id="inv_make" name="inv_make" required placeholder="Enter vehicle make" class="form-input" pattern="^[A-Za-z0-9]+$" 
+               minlength="3" 
+               title="Make should have at least 3 characters and no spaces." >
     </div>
 
     <div class="form-group">
@@ -25,7 +27,7 @@
 
     <div class="form-group">
         <label for="inv_price">Price ($)</label>
-        <input type="number" id="inv_price" name="inv_price" required placeholder="Enter vehicle price" min="0"
+        <input type="number" id="inv_price" name="inv_price" required placeholder="Enter vehicle price" min="1000"
             step="0.01" class="form-input">
     </div>
 
@@ -37,7 +39,9 @@
 
     <div class="form-group">
         <label for="inv_color">Color</label>
-        <input type="text" id="inv_color" name="inv_color" required class="form-input">
+        <input type="text" id="inv_color" name="inv_color" required class="form-input" pattern="^[A-Za-z0-9]+$" 
+               minlength="3" 
+               title="Classification should have at least 3 characters and no spaces." >
     </div>
 
     <div class="form-group">
