--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,12 +1,12 @@
 <h2>Login</h2>
 <div id="response-message"><%- messages() %></div>
-<form action="/submit" method="post">
+<form id="loginForm" action="/account/account/login" method="post">
     <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
+    <input type="email" id="account_email" name="account_email" required><br><br>
 
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
+    <input type="password" id="account_password" name="account_password" required><br><br>
 
     <button type="submit">Submit</button>
 </form><br>
-No Account?<a href="/account/registerr">Register</a>
+No Account?<a href="/account/account/registerr">Register</a>
