--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,11 @@
         <a href="/" title="Return to home page">CSE Motors</a>
     </span>
     <div id="tools">
-        <a title="Click to log in" href="/account/login">My Account</a>
+        <% if (userIsLoggedIn) { %>
+            <a href="/account/account/management" title="Manage your account">Welcome <%= user.account_firstname %></a>
+            <a href="/account/account/logout" title="Click to log out">Logout</a>
+        <% } else { %>
+            <a title="Click to log in" href="/account/account/login">My Account</a>
+        <% } %>
     </div>
 </header>
