--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -3,9 +3,15 @@
 <% if (accountType==='Client' ) { %>
 <h2>Welcome <%= user.account_firstname %></h2>
     <p><a href="/account/account/update/<%= user.account_id %>">Update Account Information</a></p>
-<% } else { %>
+<% } else if (accountType==='Employee' ){ %>
 <h2>Welcome <%= user.account_firstname %></h2>
-    <h3>Inventory Management</h3>
+    <h3>Inventory and Account Management</h3>
     <p><a href="/inv">Go to Inventory Management</a></p>
     <p><a href="/account/account/update/<%= user.account_id %>">Update Account Information</a></p>
+<% } else{ %>
+    <h2>Welcome <%= user.account_firstname %></h2>
+    <h3>Inventory and Account Management</h3>
+    <p><a href="/inv">Go to Inventory Management</a></p>
+    <p><a href="/account/account/update/<%= user.account_id %>">Update Account Information</a></p>
+    <p><a href="/account/account/updateother/">Update Other User</a></p>
 <% } %>
